[tool.poetry]
name = "missouri"
version = "0.3.0"
description = "Read and write JSON in one line"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Body Labs, Metabolize, and other contributors"]
license = "Apache-2.0"
include = ["CHANGELOG.md"]
exclude = ["*/test_*.py"]
repository = "https://github.com/metabolize/missouri"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = ">= 3.8, < 4"
simplejson = ">= 3, < 4"

[tool.poetry.dev-dependencies]
black = "23.3.0"
click = "8.1.3"
coverage = "7.2.7"
executor = "23.2"
flake8 = "5.0.4"
flake8-import-order = "0.18.2"
mypy = "1.4.1"
myst-parser = "0.18.1"
numpy = "1.24.4"
pytest = "7.4.0"
pytest-cov = "4.1.0"
pytest-mock = "3.11.1"
Sphinx = "5.3.0"
sphinxcontrib-apidoc = "0.3.0"
types-simplejson = "3.19.0.1"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = ["**/test_*.py"]
fail_under = 100.0

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true
