[tool.poetry]
name = "missouri"
version = "1.0.0"
description = "Read and write JSON in one line"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Body Labs, Metabolize, and other contributors"]
license = "Apache-2.0"
include = ["CHANGELOG.md"]
exclude = ["*/test_*.py"]
repository = "https://github.com/metabolize/missouri"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = ">= 3.9, < 4"
simplejson = ">= 3, < 4"

[tool.poetry.dev-dependencies]
black = "25.1.0"
click = "8.1.8"
coverage = "7.8.0"
executor = "23.2"
flake8 = "7.2.0"
flake8-import-order = "0.18.2"
mypy = "1.15.0"
myst-parser = "3.0.1"
numpy = "1.24.4"
pytest = "8.3.5"
pytest-cov = "6.1.1"
pytest-mock = "3.14.0"
Sphinx = "7.4.7"
sphinxcontrib-apidoc = "0.5.0"
types-simplejson = "3.19.0.2"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = ["**/test_*.py"]
fail_under = 100.0

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true
